--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,15 @@
   "require": {
     "php": ">=7.2.0",
     "aura/router": "^3.1",
+    "psr/container": "^1.0",
     "psr/http-message": "^1.0",
+    "psr/http-server-handler": "^1.0",
+    "psr/http-server-middleware": "^1.0",
+    "zendframework/zend-config-aggregator": "^1.1",
     "zendframework/zend-diactoros": "^2.1",
-    "zendframework/zend-httphandlerrunner": "^1.1"
+    "zendframework/zend-httphandlerrunner": "^1.1",
+    "zendframework/zend-servicemanager": "^3.4",
+    "zendframework/zend-stratigility": "^3.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.1",
