--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
     </testsuites>
     <filter>
         <whitelist>
-            <directory suffix=".php">./framework/</directory>
+            <directory suffix=".php">./eco.framework/</directory>
         </whitelist>
     </filter>
 </phpunit>
