--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "psr/http-message": "^1.0",
     "psr/http-server-handler": "^1.0",
     "psr/http-server-middleware": "^1.0",
+    "twig/twig": "^2.9",
     "zendframework/zend-config-aggregator": "^1.1",
     "zendframework/zend-diactoros": "^2.1",
     "zendframework/zend-httphandlerrunner": "^1.1",
