--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "zendframework/zend-stratigility": "^3.1"
   },
   "require-dev": {
+    "filp/whoops": "^2.3",
     "phpunit/phpunit": "^8.1",
     "roave/security-advisories": "dev-master"
   },
