--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
   "require": {
     "php": ">=7.2.0",
     "aura/router": "^3.1",
+    "monolog/monolog": "^1.24",
     "psr/container": "^1.0",
     "psr/http-message": "^1.0",
     "psr/http-server-handler": "^1.0",
     "psr/http-server-middleware": "^1.0",
+    "psr/log": "^1.1",
     "twig/twig": "^2.9",
     "zendframework/zend-config-aggregator": "^1.1",
     "zendframework/zend-diactoros": "^2.1",
