--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   "require-dev": {
     "filp/whoops": "^2.3",
     "phpunit/phpunit": "^8.1",
-    "roave/security-advisories": "dev-master"
+    "roave/security-advisories": "dev-master",
+    "squizlabs/php_codesniffer": "^3.4"
   },
   "autoload": {
     "psr-4": {
@@ -32,6 +33,8 @@
     }
   },
   "scripts": {
-    "test": "phpunit --colors=always"
+    "test": "phpunit --colors=always",
+    "cs-check": "phpcs",
+    "cs-fix": "phpcbf"
   }
 }
