Added doctrine, migrations, validator

--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -7,3 +7,8 @@ return [
         ],
     ],
 ];
+    'pdo' => [
+        'dsn' => 'sqlite:db/db.sqlite',
+        'username' => '',
+        'password' => '',
+    ],
