--- a/composer.json
+++ b/composer.json
@@ -4,23 +4,28 @@
   },
   "require": {
     "php": ">=7.2.0",
+    "ext-PDO": "^7.1",
     "aura/router": "^3.1",
-    "monolog/monolog": "^1.24",
+    "dasprid/container-interop-doctrine": "^1.1",
+    "doctrine/migrations": "^2.0",
+    "monolog/monolog": "^1.23",
     "psr/container": "^1.0",
     "psr/http-message": "^1.0",
-    "psr/http-server-handler": "^1.0",
     "psr/http-server-middleware": "^1.0",
-    "psr/log": "^1.1",
-    "symfony/console": "^4.2",
-    "twig/twig": "^2.9",
-    "zendframework/zend-config-aggregator": "^1.1",
-    "zendframework/zend-diactoros": "^2.1",
-    "zendframework/zend-httphandlerrunner": "^1.1",
-    "zendframework/zend-servicemanager": "^3.4",
-    "zendframework/zend-stratigility": "^3.1"
+    "psr/log": "^1.0",
+    "stormiix/laravel-mix-twig-extension": "dev-master",
+    "symfony/console": "^4.1",
+    "symfony/validator": "^4.2",
+    "twig/twig": "^2.4",
+    "zendframework/zend-config-aggregator": "^1.0",
+    "zendframework/zend-diactoros": "^1.7",
+    "zendframework/zend-servicemanager": "^3.3",
+    "zendframework/zend-stratigility": "^3.0"
   },
   "require-dev": {
+    "doctrine/data-fixtures": "^1.3",
     "filp/whoops": "^2.3",
+    "fzaninotto/faker": "^1.8",
     "phpunit/phpunit": "^8.1",
     "roave/security-advisories": "dev-master",
     "squizlabs/php_codesniffer": "^3.4"
