--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "require": {
     "php": ">=7.2.0",
     "ext-PDO": "^7.1",
+    "aura/filter": "^2.3",
     "aura/router": "^3.1",
     "dasprid/container-interop-doctrine": "^1.1",
     "doctrine/migrations": "^2.0",
@@ -15,10 +16,10 @@
     "psr/log": "^1.0",
     "stormiix/laravel-mix-twig-extension": "dev-master",
     "symfony/console": "^4.1",
-    "symfony/validator": "^4.2",
     "twig/twig": "^2.4",
     "zendframework/zend-config-aggregator": "^1.0",
     "zendframework/zend-diactoros": "^1.7",
+    "zendframework/zend-httphandlerrunner": "^1.1",
     "zendframework/zend-servicemanager": "^3.3",
     "zendframework/zend-stratigility": "^3.0"
   },
@@ -39,6 +40,7 @@
     }
   },
   "scripts": {
+    "serve": "php -S 0.0.0.0:8080 -t public",
     "test": "phpunit --colors=always",
     "cs-check": "phpcs",
     "cs-fix": "phpcbf",
