--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -6,9 +6,9 @@ return [
             'admin' => 'password',
         ],
     ],
-];
     'pdo' => [
-        'dsn' => 'sqlite:db/db.sqlite',
-        'username' => '',
+        'dsn' => 'mysql:host=localhost;dbname=eco-system',
+        'username' => 'root',
         'password' => '',
     ],
+];
